# harmony_bot

./: .gitignore  CMakeLists.txt  README.md  main.cpp
libs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  harmony.sln  harmony.vcxproj  harmony.vcxproj.filters
libs/libs/DPP/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  dpp.vcxproj  dpp.vcxproj.filters  libdpp.sln  unittest.vcxproj  unittest.vcxproj.filters
libs/libs/fmt/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  FMT.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  fmt.vcxproj  fmt.vcxproj.filters
libs/libs/nlohmann/json/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  nlohmann_json.pc  nlohmann_json.sln
libs/re2/re2/: stringpiece.h
src/: harmony_commands.cpp  harmony_config.cpp  indexer_map.cpp  indexing_context.cpp  main.cpp
src/include/: harmony_commands.hpp  harmony_config.hpp  indexer_map.hpp  indexing_context.hpp  utils.hpp
